tests/ui/type/ascription/issue-47666.stderr
error: path separator must be a double colon
  --> $DIR/issue-47666.rs:3:19
   |
LL |     let _ = Option:Some(vec![0, 1]);
   |                   ^
   |
help: use a double colon instead
   |
LL |     let _ = Option::Some(vec![0, 1]);
   |                    +

error: aborting due to 1 previous error

